--- a/public/display-matches.html
+++ b/public/display-matches.html
@@ -55,8 +55,40 @@
 
       <div class="starter-template">
         <h1>Matches</h1>
-        <p class="lead">See who matches your interest & schedule.</p>
-        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">&Rightarrow; Scan &Leftarrow;</a>
+        <p class="lead"></p>
+
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nickname</th>
+              <th scope="col">Username</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+
       </div>
 
     </main><!-- /.container -->
