Changing the nav-bar

--- a/public/landingLogin.html
+++ b/public/landingLogin.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>PickUp</title>
-	<link rel="stylesheet" href="landinglogin.css">
-	<link rel="stylesheet" href="bootstrap-material-design.css">
+	<link rel="stylesheet" href="/landinglogin.css">
+	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,400" rel="stylesheet">
 </head>
 
@@ -30,7 +30,7 @@
 							</a>
 						</li>
 						<li class="nav-item ">
-							<a class="nav-link " href="# ">My Schedule</a>
+							<a class="nav-link " href="/schedule">My Schedule</a>
 						</li>
 						<li class="nav-item dropdown ">
 							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true " aria-expanded="false ">
@@ -113,7 +113,7 @@
 
 </html>
 
-<!-- 
+<!--
       https://unsplash.com/photos/dybZ3jXtYUo
       https://unsplash.com/photos/eilPz30MSUo
       https://unsplash.com/photos/DswQ6jBW3_0
