--- a/public/schedule.html
+++ b/public/schedule.html
@@ -80,35 +80,40 @@
 </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Pick-Up</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <!-- navbar -->
+  	<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  		<div class="container ">
+  			<a class="navbar-brand " href="# ">PickUp</a>
+  			<button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
+  			" aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
+  				<span class="navbar-toggler-icon "></span>
+  			</button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Schedule <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Scan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Report</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  			<div class="collapse navbar-collapse " id="navbarSupportedContent ">
+  				<div class="container ">
+  					<ul class="navbar-nav mr-auto ">
+  						<li class="nav-item active ">
+  							<a class="nav-link " href="# ">Profile
+  								<span class="sr-only ">(current)</span>
+  							</a>
+  						</li>
+  						<li class="nav-item ">
+  							<a class="nav-link " href="/schedule">My Schedule</a>
+  						</li>
+  						<li class="nav-item dropdown ">
+  							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true " aria-expanded="false ">
+  								Options
+  							</a>
+  							<div class="dropdown-menu " aria-labelledby="navbarDropdown">
+  								<a class="dropdown-item " href="#">Report User</a>
+  								<a class="dropdown-item " href="#">Another action</a>
+  							</div>
+  						</li>
+  					</ul>
+  				</div>
+  			</div>
+  		</div>
+  	</nav>
 
     <div id="wrapper">
       <div id="myScheduler"></div>
