--- a/public/landingLogin.html
+++ b/public/landingLogin.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>PickUp</title>
-	<link rel="stylesheet" href="landinglogin.css">
+	<link rel="stylesheet" href="landingLogin.css">
 	<link rel="stylesheet" href="bootstrap-material-design.css">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,400" rel="stylesheet">
 </head>
