--- a/public/landingLogin.html
+++ b/public/landingLogin.html
@@ -48,11 +48,11 @@
 		</div>
 	</nav>
 
-	<div id="headerText " class="container text-center ">
-		<h1>
+	<div id="headerText" class="container text-center">
+		<h1 id="brand">
 			PickUp
 		</h1>
-		<h3>
+		<h3 id="motivation">
 			Connecting our campus, one activity at a time
 		</h3>
 	</div>
